--- a/html/registrationpage1.html
+++ b/html/registrationpage1.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowerElegance Registration</title>
-    <link rel="stylesheet" href="css/registrationpage.css">
-</head>
+    <title>FlowerElegance Registration</title> -->
+   <!-- <link rel="stylesheet" href="css/registrationpage.css">-->
+
+    
+<!--</head>  -->
 <body>
-    <div class="container">
+    <div class="container_reg">
         <div class="registration-box">
             
             <h2>Sign Up for Flower<span>Elegance</span></h2>
-            <form action="action_page.php" method="post">
+            <form id="registration-form"  method="post">
                 <input type="text" name="first_name" placeholder="First Name" required>
                 <input type="text" name="last_name" placeholder="Last Name" required>
                 <input type="text" name="email" placeholder="Email" required>
@@ -24,4 +26,9 @@
         </div>
     </div>
 </body>
-</html>
+<script src="/assets/js/jquery.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
+<script src="/assets/js/jquery.validate.min.js">
+</script>
+<script src="/js/registration_validation.js"></script>
+<!--</html>-->
