--- a/html/shoppingcart.html
+++ b/html/shoppingcart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/shoppingcart.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
+</head>-->
 
-    <body>
+  <!-- <body>
         <header>
             <input type = "checkbox" name="" id="toggler">
             <label for="toggler" class="fas fa-bars"></label>
@@ -32,47 +32,48 @@
                 <a href = "loginpage1.html" class = "fas fa-user"></a>
                 
             </div>
-        </header>
+        </header>-->
 
 
 
 
 
 
-    <div class="container">
+    <div class="container2">
         <h1>Shopping Cart</h1>
-        <div class="cart">
+        <div class="cart"> <!--
             <div class="cart-item">
                 <img src="https://fyf.tac-cdn.net/images/products/small/FYF-116.jpg?auto=webp&quality=80&width=295" alt="Product Image">
                 <div class="item-details">
                     <h3>Rose & Lily Celebration</h3>
                     <p>45$</p>
-                    <div class="quantity">Quantity: <span class="quantity-value">1</span></div> <!-- Quantity display -->
+                    <div class="quantity">Quantity: <span class="quantity-value">1</span></div> 
                     <button class="remove1-btn">Remove</button>
                 </div>
-            </div>
+            </div> -->
             <div class="cart-item">
                 <img src="https://fyf.tac-cdn.net/images/products/small/FYF-122.jpg?auto=webp&quality=80&width=354" alt="Product Image">
                 <div class="item-details">
                     <h3>Blue Skies & Sunshine</h3>
                     <p>33$</p>
-                    <div class="quantity">Quantity: <span class="quantity-value">1</span></div> <!-- Quantity display -->
+                    <div class="quantity">Quantity: <span class="quantity-value">1</span></div> 
                     <button class="remove1-btn">Remove</button>
                 </div>
             </div>
-            <!-- More cart items can be added here -->
+            
         </div>
         <div class="cart-total">
             <h3>Total: 78$</h3>
-            <a href="checkoutpage.html" class="checkout-btn">Checkout</a>
+            <a href="#checkoutpage" class="checkout-btn">Checkout</a>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-
+<section src="/js/addToCart.js"></section>
 
 
     <!-- FOOTER SECTION STARTS -->
-    <section class="footer">
+  <!--  <section class="footer">
         <div class="box-container">
             <div class="box">
                 <h3>Quick Links</h3>
