--- a/html/privacypolicy.html
+++ b/html/privacypolicy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - FlowerElegance</title>
-    <link rel="stylesheet" href="css/privacypolicy.css">
+    <link rel="stylesheet" href="../assets/css/privacypolicy.css">
     
 </head>
 <body>
