--- a/html/product3detailpage.html
+++ b/html/product3detailpage.html
@@ -6,8 +6,8 @@
     <title>Product Detail Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <link rel="stylesheet" href="css/productdetailpage.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../assets/css/productdetailpage.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon (1).ico">
 
 </head>
